# DISCO

./: .ChangeLog.swp  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.pipe  config.cache  config.status  configure  configure.in  disco  disco.c  disco.fp  disco.h
.deps/: disco.Po
autom4te.cache/: output.0  requests  traces.0
disco.dSYM/Contents/: Info.plist
