dnl Process this file with autoconf to produce a configure script.
AC_INIT(disco.h)
AM_INIT_AUTOMAKE(Disco, 0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h      \
                  errno.h       \
                  stdio.h       \
                  stdlib.h      \
                  sys/types.h   \
                  netinet/in.h  \
                  netinet/ip.h  \
                  netinet/tcp.h \
                  pcap.h        \
                  signal.h])

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS([strcpy \
                strtok])

AC_OUTPUT(Makefile)
